2018-08-09  Stuart Caie <kyzer@cabextract.org.uk>

	* Makefile.am: the test file cve-2015-4467-reset-interval-zero.chm is
	detected by ClamAV as BC.Legacy.Exploit.CVE_2012_1458-1 "infected".
	My hosting deletes anything that ClamAV calls "infected", so has been
	continually deleting the official libmspack 0.7alpha release.
	
	CVE-2012-1458 is the same issue as CVE-2015-4467: both libmspack, and
	ClamAV using libmspack, could get a division-by-zero crash when the LZX
	reset interval was zero. This was fixed years ago, but ClamAV still has 
	it as a signature, which today prevents me from releasing libmspack.
	
	BC.Legacy.Exploit.CVE_2012_1458-1 is a bytecode signature, so I can't
	see the exact trigger conditions, but I can see that it looks for the
	"LZXC" signature of the LZX control file, so I've changed this to
	"lzxc" and added a step in the Makefile to change it back to LZXC, so
	I can release libmspack whether or not ClamAV keeps the signature.

2018-04-26  Stuart Caie <kyzer@cabextract.org.uk>

	* read_chunk(): the test that chunk numbers are in bounds was off
	by one, so read_chunk() returned a pointer taken from outside
	allocated memory that usually crashes libmspack when accessed.
	Thanks to Hanno Böck for finding the issue and providing a sample.

	* chmd_read_headers(): reject files with blank filenames. Thanks
	again to Hanno Böck for finding the issue and providing a sample file.

2018-02-06  Stuart Caie <kyzer@cabextract.org.uk>

	* chmd.c: fixed an off-by-one error in the TOLOWER() macro, reported
	by Dmitry Glavatskikh. Thanks Dmitry!

2017-11-26  Stuart Caie <kyzer@cabextract.org.uk>

	* kwajd_read_headers(): fix up the logic of reading the filename and
	extension headers to avoid a one or two byte overwrite. Thanks to
	Jakub Wilk for finding the issue.

	* test/kwajd_test.c: add tests for KWAJ filename.ext handling

2017-10-16  Stuart Caie <kyzer@cabextract.org.uk>

	* test/cabd_test.c: update the short string tests to expect not only