@@ -113,8 +113,8 @@ static struct mskwajd_header *kwajd_open(struct mskwaj_decompressor *base,
     }
     
     if (self->error) {
-	if (fh)  sys->close(fh);
-	if (hdr) sys->free(hdr);
+	if (fh) sys->close(fh);
+	sys->free(hdr);
 	hdr = NULL;
     }
 
